# apex-map-tracker

./: .env.example  .gitignore  Cargo.toml  sqlx-data.json
migrations/: 20230206222141_create_map_rotation_table.down.sql  20230206222141_create_map_rotation_table.up.sql
src/: config.rs  configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/commands/: command.rs  error.rs  maps.rs  misc.rs  mod.rs  result.rs
src/map_rotation/: battle_royale.rs  current_map.rs  ltm.rs  map_rotation.rs  map_rotation_code.rs  mod.rs  next_map.rs  utils.rs
