[package]
name = "apex-map-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.11", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
lazy_static = "1.4"
tracing = "0.1.23"
tracing-subscriber = "0.3.16"
simplelog = "^0.12.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
