[package]
name = "apex-map-tracker"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="apex-map-tracker"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.1.2"
lazy_static = "1.4"
tracing = "0.1.23"
tracing-subscriber = "0.3.16"
simplelog = "^0.12.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
config = "0.13.3"
uuid = { version = "1.3.0", features = ["v4"] }

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
"rustls_backend",
"builder",
"cache",
"chrono",
"client",
"gateway",
"model",
"http",
"utils"
]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"mysql",
"migrate",
"offline"
]
