[package]
name = "apex-map-tracker"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="apex-map-tracker"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.1.2"
lazy_static = "1.4"
tracing = {version = "0.1.37", features = ["log"]}
tracing-subscriber = {version = "0.3.16", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1"
config = "0.13.3"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
"rustls_backend",
"builder",
"cache",
"chrono",
"client",
"gateway",
"model",
"http",
"utils"
]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"mysql",
"migrate",
"offline"
]
